syntax = "proto3";

package sigma;
option  optimize_for = CODE_SIZE;
option  go_package = "./;sigma";

message Configuration {
string NatsUrl = 1;
string NatsUsername = 2;
string NatsPassword = 3;
}

